Fixes sidebar toggle behind header

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -5,5 +5,4 @@
   left: 0;
   padding: 10px 5px;
   position: fixed;
-  z-index: 1;
 }
