--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -40,6 +40,7 @@
 .sidebar-toggle {
   position: absolute;
   top: 10px;
+  z-index: 1;
 
   /* Smartphones (portrait) ----------- */
   @media only screen and (max-width : 568px) {
